up the memory settings.